src/test/deca/context/valid/Obj/extends.deca
// Description:
//    Déclaration d'une classe qui étend une autre classe
//
// Résultat:
//    Succès
//
class A {}
class B extends A {}
{}