src/test/deca/context/invalid/Obj/extends-float.deca
// Description:
//    Déclaration d'une classe qui hérite des flottants
//
// Résultat:
//La superclasse donnée n'est pas une classe
//
class A extends float{}
{}